Even more content. I'm getting tired of all that HTML.

--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -176,6 +176,50 @@
                         </div>
                     </div>
                 </div>
+                <div class="ui raised segment">
+                    <span class="ui red ribbon label">Environments</span>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Archlinux
+                                <div class="ui right floated">
+                                    <span class="ui basic red circular label">Work Station</span>
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            I'm currently working on my Archlinux laptop. It's been four years since I installed Arch and everything works fine (even though my root partition is currently full because of Docker). One of my raspberry also runs Arch and acts like a server for some
+                            of my IRC bots.
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Debian
+                                <div class="ui right floated">
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I admnistrate those on a daily basis.
+                        </div>
+                    </div>
+                    <div class="ui fluid card">
+                        <div class="content">
+                            <div class="header">
+                                Alpine
+                                <div class="ui right floated">
+                                    <span class="ui basic orange circular label">Server</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="extra content">
+                            When working with Docker, I love Alpine because of its small size and all of its security aspects.
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="column">
                 <div class="ui raised segment">
@@ -332,50 +376,47 @@
                             I use Ansible on a daily basis to deploy my projects. Also used it in a professional environment to automate the servers provisionning.
                         </div>
                     </div>
-                </div>
-                <div class="ui raised segment">
-                    <span class="ui red ribbon label">Environments</span>
                     <div class="ui fluid card">
                         <div class="content">
                             <div class="header">
-                                Archlinux
+                                Drone CI
                                 <div class="ui right floated">
-                                    <span class="ui basic red circular label">Work Station</span>
-                                    <span class="ui basic orange circular label">Server</span>
+                                    <span class="ui basic grey circular label">Deployment</span>
                                 </div>
                             </div>
                         </div>
                         <div class="extra content">
-                            I'm currently working on my Archlinux laptop. It's been four years since I installed Arch and everything works fine (even though my root partition is currently full because of Docker). One of my raspberry also runs Arch and acts like a server for some of my IRC bots.
+                            That docker based continuous integrator is perfect. I also use that daily to automate my builds and automate the production cycle.
                         </div>
                     </div>
                     <div class="ui fluid card">
                         <div class="content">
                             <div class="header">
-                                Debian
+                                Nginx
                                 <div class="ui right floated">
-                                    <span class="ui basic orange circular label">Server</span>
+                                    <span class="ui basic black circular label">Web Server</span>
                                 </div>
                             </div>
                         </div>
                         <div class="extra content">
-                            Most of my servers are running Debian (2 Scaleways, 1 OVH), I admnistrate those on a daily basis.
+                            I used nginx before using Caddy and I keep using it because Caddy lacks some of nginx's features (caching, wildcards).
                         </div>
                     </div>
                     <div class="ui fluid card">
                         <div class="content">
                             <div class="header">
-                                Alpine
+                                Caddy
                                 <div class="ui right floated">
-                                    <span class="ui basic orange circular label">Server</span>
+                                    <span class="ui basic black circular label">Web Server</span>
                                 </div>
                             </div>
                         </div>
                         <div class="extra content">
-                            When working with Docker, I love Alpine because of its small size and all of its security aspects.
+                            A modern web server with a tight integration with LetsEncrypt. I'm using this everywhere I can, it's a breeze to work with and has great performances.
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
     </div>
