--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -5,7 +5,7 @@
         <p>
             In this section I'll present to you my skill set. Most of the items described here will have related projects that will be found on the bottom of the card describing the skill. You can hover the different projects to see the stack used for each one.
         </p>
-        <div class="ui two column grid">
+        <div class="ui two column stackable grid">
             <div class="column">
                 <div class="ui raised segment">
                     <span class="ui red ribbon label">Languages</span>
