--- a/templates/experience.tmpl
+++ b/templates/experience.tmpl
@@ -2,6 +2,93 @@
 <div class="ui vertical stripe segment">
     <div class="ui container">
         <h3 class="ui header">Experience</h3>
+        <div class="ui grid">
+            <div class="four wide column"></div>
+            <div class="twelve wide column">
+                <div class="ui items">
+                    <div class="item">
+                        <div class="image">
+                            <img src="/static/img/defab.png">
+                        </div>
+                        <div class="middle aligned content">
+                            <a class="header">2015-2016 Defab</a>
+                            <div class="meta">
+                                <span>Developer and Devops</span>
+                            </div>
+                            <div class="description">
+                                <ul>
+                                    <li>Implementing the best practices in a cloud environement at Outscale
+                                        <ul>
+                                            <li>Continuous integration with Drone CI</li>
+                                            <li>Auto-generating documentation</li>
+                                            <li>Automated deployment using Ansible</li>
+                                            <li>Bastion architecture for security purpose</li>
+                                            <li>Deployment of several services (Gogs, Drone CI, Piwik, Pydio)</li>
+                                        </ul>
+                                    </li>
+                                    <li>Writing a microservice backup system in Go</li>
+                                    <li>Writing a wrapper on top of the Boto lib</li>
+                                    <li>Moving the company's website from WordPress to Go with Piwik as analytics engine</li>
+                                </ul>
+                                <br />
+                            </div>
+                            <div class="extra">
+                                <div class="ui labels">
+                                    <span class="ui label">Go</span>
+                                    <span class="ui label">Gin</span>
+                                    <span class="ui label">Microservices</span>
+                                    <span class="ui label">Ansible</span>
+                                    <span class="ui label">Python</span>
+                                    <span class="ui label">Boto</span>
+                                    <span class="ui label">Cloud</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="item">
+                        <div class="image">
+                            <img src="/static/img/oop_white.png">
+                        </div>
+                        <div class="middle aligned content">
+                            <a class="header">OutOfPluto</a>
+                            <div class="meta">
+                                <span>Django Developer</span>
+                            </div>
+                            <div class="description">
+
+                            </div>
+                            <div class="extra">
+                                <div class="ui labels">
+                                    <span class="ui label">Python</span>
+                                    <span class="ui label">Django</span>
+                                    <span class="ui label">Python</span>
+                                    <span class="ui label">Boto</span>
+                                    <span class="ui label">Cloud</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
+                            <img src="/static/img/mobeye.png">
+                        </div>
+                        <div class="content">
+                            <a class="header">Defab</a>
+                            <div class="meta">
+                                <span>Something here</span>
+                            </div>
+                            <div class="description">
+                                <p>Something else here, description or such</p>
+                            </div>
+                            <div class="extra">
+                                Some details
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 {{ end }}
