--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Depado</title>
-    <link rel="icon" href="/static/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="/static/semantic.min.css">
-    <link rel="stylesheet" type="text/css" href="/static/custom.css">
+    <link rel="icon" href="/static/img/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="/static/css/semantic/semantic.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/custom.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
@@ -51,7 +51,6 @@
                     <i class="white fa fa-linkedin fa-2x"></i>
                 </a>&nbsp;&nbsp;
             </div>
-
         </div>
 
         <div class="ui vertical stripe segment">
@@ -73,9 +72,9 @@
         {{ template "experience" }}
 
     </div>
-    <script src="static/jquery.min.js"></script>
-    <script src="static/semantic.min.js"></script>
-    <script src="static/mo.min.js"></script>
+    <script src="static/js/jquery.min.js"></script>
+    <script src="static/css/semantic/semantic.min.js"></script>
+    <script src="static/js/mo.min.js"></script>
     <script>
         $(document).ready(function() {
             $('.with-popup').popup({
