Conf and template

--- a/templates/experience.tmpl
+++ b/templates/experience.tmpl
@@ -8,7 +8,7 @@
                 <div class="ui items">
                     <div class="item">
                         <div class="image">
-                            <img src="/static/img/defab.png">
+                            <img src="/static/img/defab.png" alt="defab">
                         </div>
                         <div class="middle aligned content">
                             <a class="header">2015-2016 Defab</a>
@@ -41,6 +41,8 @@
                                     <span class="ui label">Python</span>
                                     <span class="ui label">Boto</span>
                                     <span class="ui label">Cloud</span>
+                                    <span class="ui label">MySQL</span>
+                                    <span class="ui label">SQLite</span>
                                 </div>
                             </div>
                         </div>
@@ -48,41 +50,69 @@
                     <br />
                     <div class="item">
                         <div class="image">
-                            <img src="/static/img/oop_white.png">
+                            <img src="/static/img/oop_white.png" alt="oop">
                         </div>
                         <div class="middle aligned content">
-                            <a class="header">OutOfPluto</a>
+                            <a class="header">2014-2015 OutOfPluto</a>
                             <div class="meta">
-                                <span>Django Developer</span>
+                                <span>Junior Django Developer (Sandwich Course)</span>
                             </div>
                             <div class="description">
-
+                                <ul>
+                                    <li>Working on multiple Django projects
+                                        <ul>
+                                            <li>Adding features</li>
+                                            <li>Bug fixing</li>
+                                            <li>Production deployment</li>
+                                        </ul>
+                                    </li>
+                                    <li>Adding database migrations</li>
+                                    <li>Working on some electronic projects</li>
+                                </ul>
                             </div>
                             <div class="extra">
                                 <div class="ui labels">
                                     <span class="ui label">Python</span>
                                     <span class="ui label">Django</span>
-                                    <span class="ui label">Python</span>
-                                    <span class="ui label">Boto</span>
-                                    <span class="ui label">Cloud</span>
+                                    <span class="ui label">MySQL</span>
+                                    <span class="ui label">Project Management</span>
+                                    <span class="ui label">Electronic</span>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <br />
                     <div class="item">
                         <div class="image">
-                            <img src="/static/img/mobeye.png">
+                            <img src="/static/img/mobeye.png" alt="mobeye">
                         </div>
                         <div class="content">
-                            <a class="header">Defab</a>
+                            <a class="header">2013-2014 Mobeye</a>
                             <div class="meta">
-                                <span>Something here</span>
+                                <span>Junior Django Developer (Sandwich Course)</span>
                             </div>
                             <div class="description">
-                                <p>Something else here, description or such</p>
+                                <ul>
+                                    <li>Working on a Django app
+                                        <ul>
+                                            <li>Rest API</li>
+                                            <li>Django admin interface customisation</li>
+                                            <li>Implementing a monitoring dashboard template</li>
+                                            <li>Working with real time data using socket.io and node.js</li>
+                                        </ul>
+                                    </li>
+                                    <li>Automating deployment using Ansible</li>
+                                </ul>
                             </div>
                             <div class="extra">
-                                Some details
+                                <div class="ui labels">
+                                    <span class="ui label">Python</span>
+                                    <span class="ui label">Django</span>
+                                    <span class="ui label">Ansible</span>
+                                    <span class="ui label">PostgreSQL</span>
+                                    <span class="ui label">Socket.io</span>
+                                    <span class="ui label">node.js</span>
+                                </div>
                             </div>
                         </div>
                     </div>
