--- a/templates/projects.tmpl
+++ b/templates/projects.tmpl
@@ -1,5 +1,5 @@
 {{ define "projects" }}
-<div class="ui vertical stripe segment">
+<div class="ui vertical stripe segment" id="projects">
     <div class="ui container">
         <h3 class="ui header">Projects</h3>
         <p>
