--- a/templates/skills.tmpl
+++ b/templates/skills.tmpl
@@ -1,5 +1,5 @@
  {{ define "skills" }}
-<div class="ui vertical stripe segment">
+<div class="ui vertical stripe segment" id="skills">
     <div class="ui container">
         <h3 class="ui header">Skills</h3>
         <p>
