--- a/templates/experience.tmpl
+++ b/templates/experience.tmpl
@@ -1,5 +1,5 @@
 {{ define "experience" }}
-<div class="ui vertical stripe segment">
+<div class="ui vertical stripe segment" id="experience">
     <div class="ui container">
         <h3 class="ui header">Experience</h3>
         <div class="ui grid">
