Fixing stuff and adding info

--- a/templates/experience.tmpl
+++ b/templates/experience.tmpl
@@ -8,6 +8,34 @@
                 <div class="ui items">
                     <div class="item">
                         <div class="image">
+                            <img src="/static/img/leboncoin.svg" alt="leboncoin">
+                        </div>
+                        <div class="middle aligned content">
+                            <a class="header">2016 Leboncoin</a>
+                            <div class="meta">
+                                <span>Backend Developer @ Le Lab</span>
+                            </div>
+                            <div class="description">
+                                <ul>
+                                    <li>Working on multiple projects and testing new technologies</li>
+                                </ul>
+                                <br />
+                            </div>
+                            <div class="extra">
+                                <div class="ui labels">
+                                    <span class="ui label">AWS</span>
+                                    <span class="ui label">AWS Lambda</span>
+                                    <span class="ui label">ElasticSearch</span>
+                                    <span class="ui label">Travis</span>
+                                    <span class="ui label">Python</span>
+                                    <span class="ui label">Go</span>
+                                    <span class="ui label">Cloud</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="image">
                             <img src="/static/img/defab.png" alt="defab">
                         </div>
                         <div class="middle aligned content">
