--- a/templates/projects.tmpl
+++ b/templates/projects.tmpl
@@ -17,7 +17,7 @@
         <br />
         <br />
     </div>
-    <div class="ui fluid centered cards">
+    <div class="ui centered cards container">
         {{ range $index, $element := .services }}
             <div class="ui card {{ if eq .Status 200 }}green{{ else if eq .URL "" }}green{{ else }}red{{ end }}">
                 <div class="content">
