spelling and grammar 2

--- a/templates/projects.tmpl
+++ b/templates/projects.tmpl
@@ -3,15 +3,15 @@
     <div class="ui container">
         <h3 class="ui header">Projects</h3>
         <p>
-            In this section I'll present to you some of my personnal projects. The data displayed here are automatically fetched using the API of my <a href="https://monit.depado.eu" target="_blank">monitoring service</a>. If you wish to get more information
-            on these projects you can either check the website, the github repository or the monitoring service which holds more data (commit history, build history, response time…)
+            In this section, I'll present you some of my personal projects. The data displayed here are automatically fetched using the API of my <a href="https://monit.depado.eu" target="_blank">monitoring service</a>. If you wish to get more information
+            on these projects, you can either check the website, the github repository, or the monitoring service which holds more data (commit history, build history, response time…)
         </p>
         <p>
-            All these projects are open-source, most of them are under the <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">MIT License</a> or the <a href="http://www.wtfpl.net/" target="_blank">WTFPL</a>. I'm open to pull requests
-            for all these (or even for projects on my Github account that are not listed here).
+            All of these projects are open-source; most are under the <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">MIT License</a> or the <a href="http://www.wtfpl.net/" target="_blank">WTFPL</a>. I'm open to pull requests
+            for all of these (or even for projects on my Github account that are not listed here).
         </p>
         <p>
-            The color of the card determines whether or not the service is running. Green if the service is up, red if the service isn't. Clicking on the build status will get you to the build server. To access the service, simply click on the short url written under
+            The color of the card determines whether or not the service is running. Green if the service is up, and red if the service isn't. Clicking on the build status will take you to the build server. To access the service, simply click on the short url written under
             the project's name.
         </p>
         <br />
